--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation group: 'org.json', name: 'json', version: '20090211'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
 }
@@ -24,7 +25,7 @@ test {
 
 javafx{
     version = "16"
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
 }
 
 mainClassName = 'ucf.assignments.toDoList'
